add undo operations for command example