@@ -1,21 +1,25 @@
 package designpatterns.command;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 class BankAccount {
     private int balance;
-    private int overdraftLimit = -500;
+    private static final int OVERDRAFT_LIMIT = -500;
 
     public void deposit(int amount) {
         balance += amount;
         System.out.println("Deposited: " + amount + ", balance is now " + balance);
     }
 
-    public void withdraw(int amount) {
-        if(balance - amount >= overdraftLimit) {
+    public boolean withdraw(int amount) {
+        if(balance - amount >= OVERDRAFT_LIMIT) {
             balance -= amount;
             System.out.println("Withdrew: " + amount + ", balance is now " + balance);
+            return true;
         }
+        return false;
     }
 
     @Override
@@ -28,10 +32,13 @@ class BankAccount {
 
 interface Command  {
     void call();
+    void undo();
 }
 
 class BankAccountCommand implements Command {
     private BankAccount account;
+    private boolean succeeded;
+
     public enum Action {
         DEPOSIT, WITHDRAW
     }
@@ -48,8 +55,22 @@ class BankAccountCommand implements Command {
     @Override
     public void call() {
         switch (action) {
-            case DEPOSIT -> account.deposit(amount);
-            case WITHDRAW -> account.withdraw(amount);
+            case DEPOSIT -> {
+                succeeded = true;
+                account.deposit(amount);
+            }
+            case WITHDRAW -> succeeded = account.withdraw(amount);
+        }
+    }
+
+    @Override
+    public void undo() {
+        if(!succeeded) {
+            return;
+        }
+        switch (action) {
+            case DEPOSIT -> account.withdraw(amount);
+            case WITHDRAW -> account.deposit(amount);
         }
     }
 
@@ -60,11 +81,18 @@ public class CommandEx {
     public static void main(String[] args) {
         BankAccount bankAccount = new BankAccount();
         System.out.println(bankAccount);
-        List<BankAccountCommand> commands = List.of(new BankAccountCommand(bankAccount, BankAccountCommand.Action.DEPOSIT, 100),
+        List<BankAccountCommand> commands = Arrays.asList(new BankAccountCommand(bankAccount, BankAccountCommand.Action.DEPOSIT, 100),
                 new BankAccountCommand(bankAccount, BankAccountCommand.Action.WITHDRAW, 1000));
 
-        for(BankAccountCommand command: commands) {
+        for(Command command: commands) {
             command.call();
+            System.out.println(bankAccount);
+        }
+
+        Collections.reverse(commands);
+
+        for(Command command: commands) {
+            command.undo();
             System.out.println(bankAccount);
         }
     }
